@@ -377,6 +377,10 @@ LIMIT_SCORE 100    # score limit (all limits for one match)
 LIMIT_ROUNDS 10    # max number of rounds to play
 LIMIT_TIME  30     # max time (in minutes)
 
+DEADLY_EXPLOSIONS     0  # Should cycles in the blast radius of an explosion be destroyed?
+SCORE_EXPLOSION_OWNER 0  # Points the owner of an explosion gains for destroying another enemy cycle.
+SCORE_EXPLOSION       0  # Points the enemy cycle destroyed in an explosion gains.
+
 # How wingmen are placed in formation. At SPEED_FACTOR 0, the unit 
 # is meters, and the values are scaled up with speed.
 # Don't ask where these default values come from, z-man thinks 
